--- a/src/app/sql/sql.component.html
+++ b/src/app/sql/sql.component.html
@@ -98,6 +98,21 @@
       *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
     >
       <mat-card>
+        <mat-card-title class="title1">רשימת מכשירים ביחידה-חדש</mat-card-title>
+        <mat-card-subtitle class="title1">
+          מבקש הדוח: משה ממן</mat-card-subtitle
+        >
+        <mat-card-content> פירוט מכשירים פר מחלקה</mat-card-content>
+        <button mat-button class="button" routerLink="/medicalDevices">
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
+    <div
+      class="card"
+      *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
+    >
+      <mat-card>
         <mat-card-title class="title1"> רשימת משתמשים</mat-card-title>
         <mat-card-subtitle class="title1">
           מבקש הדוח: משה ממן</mat-card-subtitle
